--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello world
+Mitch Coleman 100/100
+1.)    (20 pts) This week’s topic was important to teamwork because it helped me realize what I need to do to become a better teammate. The self-evaluation really opened my eyes to what I need to be better and change to become a better part of the team.
+ 
+2.)    (20 pts) I plan on being a better-outspoken team member. I learned and realized from the self-evaluation that I am good at keeping my thoughts and ideas to myself for some reason and need to communicate to my team my ideas and thoughts.
+ 
+3.)    (20 pts) If I had to relate this week to a religion class, I would say that everyone is progressing at different times and speeds. Everyone in the class has different things they need to work on to become more like Christ. It’s a never-ending process of trying to become more like Christ. If you are willing to be as humble and loving as Christ, you will be the best teammate there is
+ 
+4.)    (20 pts) Someone asked me about what I had on my evaluation, and it was different than there was, and they thought they were not a good person because of that. I told them that was completely not true and that everyone offers different things to a team. That’s the great part of being on a team is that everyone has different talents and skills than someone else. That’s what makes teamwork so great!
+ 
+5.)    (20 pts) My experience relates to everyone else’s because we all know we have weaknesses and are sometimes afraid to admit them. The evaluation forced us to know what our weakness is and think about what we can do to become better teammates.
+ 
+ 
+ 
