--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) This week’s topic was important to teamwork because it helped me realize what I need to do to become a better teammate. The self-evaluation really opened my eyes to what I need to be better and change to become a better part of the team.
+1.)    (20 pts) This weeks topic was important to teamwork because we were able to learn about different personality types of others. Every person is different and its through those differences that a team is able to be strong. With the different personalities, there are some that are weaker and some things and stronger at other things. It was really cool to read those strengths and weaknesses through our personality tests. 
 <br>
-2.)    (20 pts) I plan on being a better-outspoken team member. I learned and realized from the self-evaluation that I am good at keeping my thoughts and ideas to myself for some reason and need to communicate to my team my ideas and thoughts.
+2.)    (20 pts) How I plan to help and contribute to the team better is by recognizing my weaknesses and trying my best to make them my strengths. Another way I can help the team is simply having more confidence in myself and speaking up on the things that I am good and strong at. I tend to be quiet even when it comes to the things I"m good at. 
 <br>
-3.)    (20 pts) If I had to relate this week to a religion class, I would say that everyone is progressing at different times and speeds. Everyone in the class has different things they need to work on to become more like Christ. It’s a never-ending process of trying to become more like Christ. If you are willing to be as humble and loving as Christ, you will be the best teammate there is
+3.)    (20 pts) To relate this to the gospel, the first thing that comes to mind is turning my weaknesses to strenghts as the Book of Mormon says. “Because thou hast seen thy weakness thou shalt be made strong”(Ether 12:37). As we work hard on our weaknesses we will be able to become more well rounded within the gospel, in school, at home, and at our jobs. As we focus on Christ, it is through Him that we are able to be made strong through our weakness. 
 <br>
-4.)    (20 pts) Someone asked me about what I had on my evaluation, and it was different than there was, and they thought they were not a good person because of that. I told them that was completely not true and that everyone offers different things to a team. That’s the great part of being on a team is that everyone has different talents and skills than someone else. That’s what makes teamwork so great!
+4.)    (20 pts) I think the way I related to everyone else in the class was figuring out what my personality is. Everyone, including myself, seemed very interested in learning more about ourselves and the different things our personalities make us unique. With learning who we all are, we now know what we can do to better contribute to the team as we try to have the best team possible. 
 <br>
-5.)    (20 pts) My experience relates to everyone else’s because we all know we have weaknesses and are sometimes afraid to admit them. The evaluation forced us to know what our weakness is and think about what we can do to become better teammates.
+5.)    (20 pts) A cool experience that I can compair to my other experiences is that on the personality test my results were the same as I took it 6 months ago as an ISFJ. I am not surprised, but at the same time I want to continue to have experiences that improve myself adn make me a little more different than I once was. I think the best way to do taht is stepping outside my comfort zone. I am a pretty shy person but I can stretch myself and become more part of the team than staying quiet and to myself. 
 <br>
  
  
