--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) This weeks topic was important to teamwork because we were able to learn about different personality types of others. Every person is different and its through those differences that a team is able to be strong. With the different personalities, there are some that are weaker and some things and stronger at other things. It was really cool to read those strengths and weaknesses through our personality tests. 
+1.)    (20 pts) This weeks topic was important because we were able to learn what type of managment we prefer to work for. If we are more of the type of person to do exactly what is asked or be the creative and self motivated one. These are seprated by x and y. 
 <br>
-2.)    (20 pts) How I plan to help and contribute to the team better is by recognizing my weaknesses and trying my best to make them my strengths. Another way I can help the team is simply having more confidence in myself and speaking up on the things that I am good and strong at. I tend to be quiet even when it comes to the things I"m good at. 
+2.)    (20 pts) After taking the quiz that was handed out durning class on Wednesday, I learned that I can contribute to the team weather thats around my team or working by myself for the team. I am easily self motivated and driven, which could help the team with any tasks that are meant to be done by one or few people.  
 <br>
-3.)    (20 pts) To relate this to the gospel, the first thing that comes to mind is turning my weaknesses to strenghts as the Book of Mormon says. “Because thou hast seen thy weakness thou shalt be made strong”(Ether 12:37). As we work hard on our weaknesses we will be able to become more well rounded within the gospel, in school, at home, and at our jobs. As we focus on Christ, it is through Him that we are able to be made strong through our weakness. 
+3.)    (20 pts) I think something that I had experienced that everyone else did as well was understanding if you are a follower type person or a leading type person. I noticed everyone around me at my table were all completly Y or mostly Y meaning we all like to be creative and are self motived and, relitivly speaking, would excel at leading.  
 <br>
-4.)    (20 pts) I think the way I related to everyone else in the class was figuring out what my personality is. Everyone, including myself, seemed very interested in learning more about ourselves and the different things our personalities make us unique. With learning who we all are, we now know what we can do to better contribute to the team as we try to have the best team possible. 
+4.)    (20 pts) If I had to relate this to a Gospel sense, I'd say its important for us to be more X than Y. Obedience is a law that Heavenly Father takes very seriously as it is the frist law in heaven. As we are obedient and listen to God's and Chirst's example, we are able to live happy lives and return back to him. 
 <br>
-5.)    (20 pts) A cool experience that I can compair to my other experiences is that on the personality test my results were the same as I took it 6 months ago as an ISFJ. I am not surprised, but at the same time I want to continue to have experiences that improve myself adn make me a little more different than I once was. I think the best way to do taht is stepping outside my comfort zone. I am a pretty shy person but I can stretch myself and become more part of the team than staying quiet and to myself. 
+5.)    (20 pts) Something that I taught someone was it's okay to follow sometimes. Someone at my table said that they want to be a leader and can't imagine being a follower their whole career. Eventhough I agreed with them to an extent, its important to know that the best leaders are the best followers. Again when we look at Christ and His perfect life, He was the greatest follower to his Father than anyone ever has or will be. 
 <br>
  
  
