--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) This weeks topic was important because we were able to learn what type of managment we prefer to work for. If we are more of the type of person to do exactly what is asked or be the creative and self motivated one. These are seprated by x and y. 
+1.)    (20 pts) This past week was important because we were able to put everything we have done in class together and look at it in a big picture. All of the things we have learned thus far has taught us about true professionalism. 
 <br>
-2.)    (20 pts) After taking the quiz that was handed out durning class on Wednesday, I learned that I can contribute to the team weather thats around my team or working by myself for the team. I am easily self motivated and driven, which could help the team with any tasks that are meant to be done by one or few people.  
+2.)    (20 pts) I think being professional in general really helps your team out. Being professional includes, Accountability, Consideration, Humility, Communication, Tidiness, Kindness, Consistency,  Treat Others with Respect, and  Keep Your Word. These are all from the prepare module and by doing these things, you will be able ton contribute better than ever to a team. 
 <br>
-3.)    (20 pts) I think something that I had experienced that everyone else did as well was understanding if you are a follower type person or a leading type person. I noticed everyone around me at my table were all completly Y or mostly Y meaning we all like to be creative and are self motived and, relitivly speaking, would excel at leading.  
+3.)    (20 pts) This week really made me reflect the professionalism from the different jobs I have had. I worked at McDonalds in High School and was even given the opportunity to be a manager. Even being a manager, that workplace was not professionalism of the job. 
 <br>
-4.)    (20 pts) If I had to relate this to a Gospel sense, I'd say its important for us to be more X than Y. Obedience is a law that Heavenly Father takes very seriously as it is the frist law in heaven. As we are obedient and listen to God's and Chirst's example, we are able to live happy lives and return back to him. 
+4.)    (20 pts) How I would relate this to the gospel would be how we dress and act at church and in the temple. We dress in our nicest clothes when we go to church to show love and respect to Heavenly Father. Not only do we dress professionaly, but we act in reverance as well. We do this so then we can be intune with the spirit and in a way be a team with the Holy Ghost and Heavenly Father. Being professional in and at church has been important since the beginning of time. 
 <br>
-5.)    (20 pts) Something that I taught someone was it's okay to follow sometimes. Someone at my table said that they want to be a leader and can't imagine being a follower their whole career. Eventhough I agreed with them to an extent, its important to know that the best leaders are the best followers. Again when we look at Christ and His perfect life, He was the greatest follower to his Father than anyone ever has or will be. 
+5.)    (20 pts) Something that I helped someone learn this week was about the personal project. He didn't understand how or why it is important to know who you are first before leading a team. I told him it is important because inorder to be professional, you need to know your own limits. Everyone has a point where their professionalism may wear down or even wear out. It is important to keep your professionalism alive as you lead a team to lead by example. 
 <br>
+<br>
+<br>
+LINK TO MY PERSONAL PROJECT--
  
  
