--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ Mitch Coleman 100/100
 <br>
 <br>
 <br>
-LINK TO MY PERSONAL PROJECT--
+LINK TO MY PERSONAL PROJECT-- https://docs.google.com/document/d/1X8JE48yi8wwXOUVxVsAtYRAJhsLhGZ9Xy5DmsOEMjLg/edit
  
  
