--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) This past week was important because we were able to put everything we have done in class together and look at it in a big picture. All of the things we have learned thus far has taught us about true professionalism. 
+1.)    (20 pts) This weeks topic was important for teamwork because we were able to get to know ourselves even more. I have said this before but really getting to know your self really helps a team since you get to know what your strengths and weaknesses are. The web map we did in class really great at helping us to get to know ourselves better.
 <br>
-2.)    (20 pts) I think being professional in general really helps your team out. Being professional includes, Accountability, Consideration, Humility, Communication, Tidiness, Kindness, Consistency,  Treat Others with Respect, and  Keep Your Word. These are all from the prepare module and by doing these things, you will be able ton contribute better than ever to a team. 
+2.)    (20 pts)  I plan on knowing my strengths and what I can offer to the team better. There are skills and talents that people have that others don't, so being comfortable to sharing my talents is what I can do to help my team better.
 <br>
-3.)    (20 pts) This week really made me reflect the professionalism from the different jobs I have had. I worked at McDonalds in High School and was even given the opportunity to be a manager. Even being a manager, that workplace was not professionalism of the job. 
+3.)    (20 pts)  Based off my experiences this past week, my career exploration class I am taking really connects a lot to what we are covering in this class. This past week I had to take a personality test again and other tests to know what my strengths and talents are. So its really cool how both of these classes are really helping me to know myself better and become a better teammate. 
 <br>
-4.)    (20 pts) How I would relate this to the gospel would be how we dress and act at church and in the temple. We dress in our nicest clothes when we go to church to show love and respect to Heavenly Father. Not only do we dress professionaly, but we act in reverance as well. We do this so then we can be intune with the spirit and in a way be a team with the Holy Ghost and Heavenly Father. Being professional in and at church has been important since the beginning of time. 
+4.)    (20 pts)  My experiences relates to everyone elses by digging in deep with who we actually are. It's been fun because there has been some things I've laerned about myself that I never knew.
 <br>
-5.)    (20 pts) Something that I helped someone learn this week was about the personal project. He didn't understand how or why it is important to know who you are first before leading a team. I told him it is important because inorder to be professional, you need to know your own limits. Everyone has a point where their professionalism may wear down or even wear out. It is important to keep your professionalism alive as you lead a team to lead by example. 
+5.)    (20 pts)  The way I'd relate this in a gospel sense is finding yourself worth. Heavenly Father has given us all spiritual talents and gifts that are uniquly meant for you. We are given these gifts to help others and build zion here on earth. 
 <br>
 <br>
 <br>
-LINK TO MY PERSONAL PROJECT-- https://docs.google.com/document/d/1X8JE48yi8wwXOUVxVsAtYRAJhsLhGZ9Xy5DmsOEMjLg/edit
- 
+
  
