--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) This weeks topic was important for teamwork because we were able to get to know ourselves even more. I have said this before but really getting to know your self really helps a team since you get to know what your strengths and weaknesses are. The web map we did in class really great at helping us to get to know ourselves better.
+1.)    (20 pts) This weeks was important t teamwork because we were able to do an activity as a whole class. I feel like when there are a lot of people participating in a single activity, it can get confusing really quick. After the first few attempts, we didn't do so well as a class. By the end of the activity on our third round, we were in sync with everyone and was able to do well with the activity. It taught us how to work with a big team which isn't always the easiest.
 <br>
-2.)    (20 pts)  I plan on knowing my strengths and what I can offer to the team better. There are skills and talents that people have that others don't, so being comfortable to sharing my talents is what I can do to help my team better.
+2.)    (20 pts) Sometimes contrubuting to the team the best way possible is doing your best to what others suggest even though it's not what I wanted to do. After the first round I thought the outer circle and the inner circle was a great idea. After we did that, I suggested that we did the same thing for the second round but pass along multiple balls at once. No one heard me or listend to me and we tried the line method which was not effective at all. After round 2 we di the first method and passed multiple balls at once like I said before and we did very well. Even though the second method wasn't what I suggested, I still did my best at it and at times that's all you can do. 
 <br>
-3.)    (20 pts)  Based off my experiences this past week, my career exploration class I am taking really connects a lot to what we are covering in this class. This past week I had to take a personality test again and other tests to know what my strengths and talents are. So its really cool how both of these classes are really helping me to know myself better and become a better teammate. 
+3.)    (20 pts) I can relate this experience to a lot of things in my life. I'm not always that outspoken and sometmies have ideas in my mind that I don't share loud enough or at all at times. This is something that I am working on to become a beter teammate and a better leader. 
 <br>
-4.)    (20 pts)  My experiences relates to everyone elses by digging in deep with who we actually are. It's been fun because there has been some things I've laerned about myself that I never knew.
+4.)    (20 pts) Something that I taught someone was when we were creating the inner and outer circle, the person I sit next to and I proposed the original idea of doing the inner and outer circle. 
 <br>
-5.)    (20 pts)  The way I'd relate this in a gospel sense is finding yourself worth. Heavenly Father has given us all spiritual talents and gifts that are uniquly meant for you. We are given these gifts to help others and build zion here on earth. 
+5.)    (20 pts) This can be related to the gospel thorugh the idea of order. We each had to touch each ball, but we had set rules to follow inorder for what we did to work and to be acomplished. As we listened to the rules that were given, we were able to fell taht good feeling of achievment from doing our best to do our part and follw the instructions given to us. 
 <br>
 <br>
 <br>
