--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) This weeks was important t teamwork because we were able to do an activity as a whole class. I feel like when there are a lot of people participating in a single activity, it can get confusing really quick. After the first few attempts, we didn't do so well as a class. By the end of the activity on our third round, we were in sync with everyone and was able to do well with the activity. It taught us how to work with a big team which isn't always the easiest.
+1.)    (20 pts) I liekd this weeks topic a lot because we are going to do projects with other team members. Planning these projects allow ourselves to get to know eachother better and see how others work with the team. 
 <br>
-2.)    (20 pts) Sometimes contrubuting to the team the best way possible is doing your best to what others suggest even though it's not what I wanted to do. After the first round I thought the outer circle and the inner circle was a great idea. After we did that, I suggested that we did the same thing for the second round but pass along multiple balls at once. No one heard me or listend to me and we tried the line method which was not effective at all. After round 2 we di the first method and passed multiple balls at once like I said before and we did very well. Even though the second method wasn't what I suggested, I still did my best at it and at times that's all you can do. 
+2.)    (20 pts) What I have been doing to help the team is sending announcements on I learn and figuring out where everyone is at. We have a google doc and me and only one person has really done it and it has been a little frustrating. 
 <br>
-3.)    (20 pts) I can relate this experience to a lot of things in my life. I'm not always that outspoken and sometmies have ideas in my mind that I don't share loud enough or at all at times. This is something that I am working on to become a beter teammate and a better leader. 
+3.)    (20 pts) I think everyone is feeling the same feelings of stress becuase we still have to get quite a bit doen with our proposal. We are contacting eachother and making sure we get it all squared away so than we can get a good grade and get to have fun doing fun things together. 
 <br>
-4.)    (20 pts) Something that I taught someone was when we were creating the inner and outer circle, the person I sit next to and I proposed the original idea of doing the inner and outer circle. 
+4.)    (20 pts) I have had groups before that had a couple people who don't pull their weight and it is frustrating. Since we are in a teamwork class, I am going to do my best to make sure everyone is doing their part. I won't do this by myself, I will have other group members do the same so than we are all working on this together. 
 <br>
-5.)    (20 pts) This can be related to the gospel thorugh the idea of order. We each had to touch each ball, but we had set rules to follow inorder for what we did to work and to be acomplished. As we listened to the rules that were given, we were able to fell taht good feeling of achievment from doing our best to do our part and follw the instructions given to us. 
+5.)    (20 pts) You could relate this to the gospel by looking at the orginization of Christ church. Everone has a role to play to help serve, uplift, and edify others. The only way Christ's church is able to reach all of the world and makea difference in the world is by workign as a team and everyond doing their parts. 
 <br>
 <br>
 <br>
