--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) I liekd this weeks topic a lot because we are going to do projects with other team members. Planning these projects allow ourselves to get to know eachother better and see how others work with the team. 
+1.)    (20 pts) This weeks topic was important because it taught us that being the minority isn't a bad thing, but can offer different ideas and thoughts to a problem the team is tryign to resolve. 
 <br>
-2.)    (20 pts) What I have been doing to help the team is sending announcements on I learn and figuring out where everyone is at. We have a google doc and me and only one person has really done it and it has been a little frustrating. 
+2.)    (20 pts) Something that I can do to help the team more is simply speaking up and sharing my ideas more. Most of the time when I am quiet, my ideas are with everyone elses, but there are those times when my ideas are in the minority and could have potential ot help the team and the project. 
 <br>
-3.)    (20 pts) I think everyone is feeling the same feelings of stress becuase we still have to get quite a bit doen with our proposal. We are contacting eachother and making sure we get it all squared away so than we can get a good grade and get to have fun doing fun things together. 
+3.)    (20 pts) My exeperience with the game we played Tuesday was about half the time I was in the majority and the other half I was in the minority. These basically sums up my thinking pretty well with the ideas and my creative skills that I have. 
 <br>
-4.)    (20 pts) I have had groups before that had a couple people who don't pull their weight and it is frustrating. Since we are in a teamwork class, I am going to do my best to make sure everyone is doing their part. I won't do this by myself, I will have other group members do the same so than we are all working on this together. 
+4.)    (20 pts) I think that class and the game we played was pretty eye opening to everyone. It is important for all team members to be confident and comfortable to share their ideas with everyone. A simple and small idea could be a game changer to what ever the group is working on.
 <br>
-5.)    (20 pts) You could relate this to the gospel by looking at the orginization of Christ church. Everone has a role to play to help serve, uplift, and edify others. The only way Christ's church is able to reach all of the world and makea difference in the world is by workign as a team and everyond doing their parts. 
+5.)    (20 pts) This week relates to religon because being a Christian today is the minority. The world does not want to follow the commandments and God's law. Many people are making very wrong choices, but if they chose to follow Christ and be different from the world, they would be able to find that lasting happiness that they are looking for. 
 <br>
 <br>
 <br>
