--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) This weeks topic was important because it taught us that being the minority isn't a bad thing, but can offer different ideas and thoughts to a problem the team is tryign to resolve. 
+1.)    (20 pts) This week topic was important because we were able to study more about why its important to be effective communicators in a team. In the prearticletical, here is a line that I really liked, ". Competent communication capabilities are crucial to all professional careers because all careers, to different levels, involve communication in one form or another." As the article said, communication is important no matter what career or how big and how small you are.
 <br>
-2.)    (20 pts) Something that I can do to help the team more is simply speaking up and sharing my ideas more. Most of the time when I am quiet, my ideas are with everyone elses, but there are those times when my ideas are in the minority and could have potential ot help the team and the project. 
+2.)    (20 pts) Something that I can do is I could be a better communicator by following up with everyone. I can simply give a text to everyone in my group and see not only where they are in the project but how they are doing. I think its important to let people know that you care about them within your team.
 <br>
-3.)    (20 pts) My exeperience with the game we played Tuesday was about half the time I was in the majority and the other half I was in the minority. These basically sums up my thinking pretty well with the ideas and my creative skills that I have. 
+3.)    (20 pts) I think everyone has experienced a poorly communicated group project and that is the worst feeling ever. There is so much to do with no help or time. My group and I have been communicating very well these past few weeks and we are doing great. At first we didn't communicate well, but now that we know eachother better and keep in contact, everything is runnign smoothly. 
 <br>
-4.)    (20 pts) I think that class and the game we played was pretty eye opening to everyone. It is important for all team members to be confident and comfortable to share their ideas with everyone. A simple and small idea could be a game changer to what ever the group is working on.
+4.)    (20 pts) My experiences with finding intern jobs and such has been great. I worked as a housekeeper at the hospital for 6 months, made friends with those in IT, and now work as a an IT Tech at the hospital as a freshman in college. I have learned so much things just by working my job and it has been the best experience for me. 
 <br>
-5.)    (20 pts) This week relates to religon because being a Christian today is the minority. The world does not want to follow the commandments and God's law. Many people are making very wrong choices, but if they chose to follow Christ and be different from the world, they would be able to find that lasting happiness that they are looking for. 
+5.)    (20 pts) This relates to the gospel by prayer. It is important to be effective communicators to our Heavenly Father to get to know Him better, but not only that, know and understand when Heavenly Father is trying to help us. As we talk to Him more and feel that spirit and understand the spirit better, we will always feel His presents near us. 
 <br>
 <br>
 <br>
