--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 Mitch Coleman 100/100
 <br>
-1.)    (20 pts) This week topic was important because we were able to study more about why its important to be effective communicators in a team. In the prearticletical, here is a line that I really liked, ". Competent communication capabilities are crucial to all professional careers because all careers, to different levels, involve communication in one form or another." As the article said, communication is important no matter what career or how big and how small you are.
+1.)    (20 pts) This week we have been working in our groups a lot. I think this is important because we have been learning a lot about working as a team and in groups. Since we are actually practicing it now, it has been reall ygood learnign experience for all of us. 
 <br>
-2.)    (20 pts) Something that I can do is I could be a better communicator by following up with everyone. I can simply give a text to everyone in my group and see not only where they are in the project but how they are doing. I think its important to let people know that you care about them within your team.
+2.)    (20 pts) I plan on making sure my team is updated with the amount of time we have all collectivly put in. We have made a group chat and we all put in the time we personally have put towards the project and add it from there.
 <br>
-3.)    (20 pts) I think everyone has experienced a poorly communicated group project and that is the worst feeling ever. There is so much to do with no help or time. My group and I have been communicating very well these past few weeks and we are doing great. At first we didn't communicate well, but now that we know eachother better and keep in contact, everything is runnign smoothly. 
+3.)    (20 pts) This has been really fun workin in group projects. I used to do this a lot in High School, but in college I haven't done much of it. I have been looking back a lot recently to my previous experiences with group projects and we have all been staying on top of it. 
 <br>
-4.)    (20 pts) My experiences with finding intern jobs and such has been great. I worked as a housekeeper at the hospital for 6 months, made friends with those in IT, and now work as a an IT Tech at the hospital as a freshman in college. I have learned so much things just by working my job and it has been the best experience for me. 
+4.)    (20 pts) We all relate to eachother by collectively putting our time in towards the project. This has been a great thing to see because the more time spent with eachother, the greater we know eachother and eachotheres skills, talents, hobbies, and so on.
 <br>
-5.)    (20 pts) This relates to the gospel by prayer. It is important to be effective communicators to our Heavenly Father to get to know Him better, but not only that, know and understand when Heavenly Father is trying to help us. As we talk to Him more and feel that spirit and understand the spirit better, we will always feel His presents near us. 
+5.)    (20 pts) We can relate this to the gospel by saying every deciple of Christ no matter which religion, works/should work together to bring othrs joy, happiness, and love. It is through groups of people that His message is brought to pass. 
 <br>
 <br>
 <br>
